# SwingFilterSuite

./: README.md
Swing-Size Filter/CPU Implementation/Cpp/: CMakeLists.txt  ColdFilter.cpp  CountMin.cpp  CouponFilter.cpp  LogLogFilter.cpp  MurmurHash3.cpp  README.md  SwingFilter.cpp  main.cpp
Swing-Size Filter/CPU Implementation/Cpp/header/: ColdFilter.h  CountMin.h  CouponFilter.h  LogLogFilter.h  Sketch.h  SwingFilter.h
Swing-Size Filter/CPU Implementation/Cpp/scripts/: BF.sh  CF.sh  ColdFilter.cpp  LogLogFilter.cpp  SwingFilter.cpp  log.sh  main_bf.cpp  main_cf.cpp  main_log.cpp  run.sh  throughput.txt
Swing-Size Filter/CPU Implementation/Python/: Exp_Flow_Size_Estimation_.py  Exp_Heavy_Hitter_Detection_.py  Exp_Top_k_Query_.py  Packet.py  README.md  utils.py
Swing-Size Filter/CPU Implementation/Python/filters/: ASketch.py  ColdFilter.py  CouponFilter.py  (+3 more)
Swing-Size Filter/P4 Implementation/: BF_Layer=1_switch.p4  BF_Layer=2_switch.p4  README.md
Swing-Size Filter/P4 Implementation/BMv2/: BF-controller.py  BF.p4  headers.p4
Swing-Spread Filter/CPU Implementation/Cpp/: CMakeLists.txt  CSE.cpp  Couper.cpp  CouponFilter.cpp  KjSkt.cpp  LogLogFilter_Spread.cpp  MurmurHash3.cpp  README.md  SuperKjSkt.cpp  SwingFilterSpread.cpp  main.cpp  rSkt.cpp  vHLL.cpp
Swing-Spread Filter/CPU Implementation/Cpp/header/: CSE.h  Couper.h  CouponFilter.h  KjSkt.h  LogLogFilter_Spread.h  Sketch.h  SuperKjSkt.h  SwingFilterSpread.h  Xorshift.h  bitmap.h  rSkt.h  vHLL.h
Swing-Spread Filter/P4 Implementation/: README.md  SPF_1_layer.p4  SPF_2_layers.p4
data/: README.md
(+9 files in other folders)
